# ChatSystem

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  build.bat  build.sh  chat_config.h  run_system.bat  test.sh
client/: chat_window.cpp  chat_window.h  main.cpp  socket_client.cpp  socket_client.h  ui_components.cpp
common/: message.cpp  message.h  protocol.h
server/: client_handler.cpp  client_handler.h  main.cpp  server.cpp  server.h  user_manager.cpp  user_manager.h
